# mdzen

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  README-SKILLS.md  README.md  colab.ipynb  main.py  pyproject.toml
.cursor/rules/: notebook-development.md  project-rules.md
app/: minimal_autonomous.py  test_agent.ipynb
common/: __init__.py  base.py  utils.py
core/: __init__.py  langgraph_agent.py  llm_client.py  strands_agent.py  workflow_skeleton.py
job_0c776837/: session.db  session_info.json
job_0dbac9dd/: chat_history.md  session.db  session_info.json
job_0dbac9dd/amber/: amber_metadata.json  system.leap.in  system.parm7
job_0dbac9dd/solvate/: solvation_metadata.json
job_0dbac9dd/solvate_2/: solvation_metadata.json
job_0dbac9dd/solvate_3/: solvation_metadata.json
job_0dbac9dd/split/: prepare_complex_summary.json  split_metadata.json
job_13141365/: session_info.json
job_13141365/amber/: amber_metadata.json  system.leap.in
job_13141365/solvate/: solvated_packmol.inp  solvation_metadata.json
job_13141365/split/: prepare_complex_summary.json  split_metadata.json
job_20da7f25/: chat_history.md  session.db  session_info.json
job_20da7f25/amber/: amber_metadata.json  system.leap.in
job_20da7f25/solvate/: solvated_packmol.inp  solvation_metadata.json
job_20da7f25/split/: prepare_complex_summary.json  split_metadata.json
job_21e596d4/: chat_history.md  session.db  session_info.json
job_21e596d4/amber/: amber_metadata.json  system.leap.in
job_21e596d4/solvate/: solvated_packmol.inp  solvation_metadata.json
job_21e596d4/split/: prepare_complex_summary.json  protein_1.amber_renum.txt  split_metadata.json
job_2a02ed43/: session.db  session_info.json
job_3716c3b2/: session_info.json
job_4506e743/: session.db  session_info.json
job_55a0bd5b/: session.db  session_info.json
job_60f5e8fb/: chat_history.md  session.db  session_info.json
job_60f5e8fb/amber/: amber_metadata.json  system.leap.in
job_60f5e8fb/solvate/: solvated_packmol.inp  solvation_metadata.json
job_60f5e8fb/split/: prepare_complex_summary.json  split_metadata.json
job_6975c9aa/: chat_history.md  session.db  session_info.json
job_6975c9aa/amber/: amber_metadata.json  system.leap.in
job_6975c9aa/solvate/: solvated_packmol.inp  solvation_metadata.json
job_6975c9aa/split/: prepare_complex_summary.json  split_metadata.json
job_6b3d3773/: session.db  session_info.json
job_78784ecb/: session.db  session_info.json
job_98bf6082/: session.db  session_info.json
job_b775e7e7/: session.db  session_info.json
job_c5102333/: session.db  session_info.json
job_f99c3809/: chat_history.md  session.db  session_info.json
job_f99c3809/amber/: amber_metadata.json  system.leap.in
job_f99c3809/solvate/: solvated_packmol.inp  solvation_metadata.json
job_f99c3809/split/: prepare_complex_summary.json  split_metadata.json
notebooks/: 1_clarification.ipynb  2_setup_agent.ipynb  3_setup_coordinator.ipynb  4_validation.ipynb  5_full_agent.ipynb  test_amber_boltz.ipynb  test_amber_general.ipynb  test_solvation_server.ipynb  test_structure_server.ipynb  utils.py
servers/: __init__.py  amber_prep_server.md  amber_prep_server.py  amber_server.py  assembly_server.py  complex_server.py  export_server.py  genesis_server.py  ligand_server.py  md_simulation_server.py  qc_min_server.py  research_server.py  solvation_server.py  structure_server.md  structure_server.py
skills/mdzen/: SKILL.md
skills/setting-up-md-simulations/: SKILL.md  parameters.md  troubleshooting.md  workflow-guide.md
src/mcp_md/: __init__.py  clarification_agent.py  (+9 more)
tests/: test_integration.py  test_utils.py
tools/: pdbfixer_wrapper.py
(+31 files in other folders)
